examples/type_system/failing/135_if_any_branch_suppressed.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn concrete_fn(x: Int) -> Int { x }
fn any_param_fn(x: Any) -> Int { 0 }

fn add(a: Int, b: Int) -> Int { a + b }

fn main() -> Unit {
    let _f = if true { concrete_fn } else { any_param_fn }
    let _x = add(1)
}
